--- a/journal/201912.md
+++ b/journal/201912.md
@@ -157,7 +157,7 @@ Selected articles:
 - https://medium.com/@_Checkmatey_/decred-hypersecure-unforgeably-scarce-e076b91a2be
 - https://medium.com/@permabullnino/decred-on-chain-the-ticket-pool-vwap-d0a3d1c42a3
 - https://medium.com/decred/does-decred-have-the-answers-to-on-chain-governance-d35bdd176f59?
-
+- https://www.blockcommons.red/publication/staking/
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
@@ -214,13 +214,17 @@ There was very little support for proposals that did not continue to dedicate 20
 
 The Zcash Foundation decided to develop option #12 with some improvements, the rolled [back](https://www.zfnd.org/blog/proposed-nu4-zip/) on most of the improvements in response to pushback. The final slightly amended version of the proposal will be put to another community panel and forum user vote to confirm it.
 
-[ZIP 1012](https://github.com/ZcashFoundation/zips/blob/master/zip-1012.rst), as it has become, involves extending the block reward for 4 years at 20%, with 35% going to ECC, 25% to Zfnd, and 40% for additional "Major Grants". Changes to the proposal involve making it more explicitly controlled by Zfnd, and removing a restriction that would have excluded ECC from receiving any funding as part of "major grants". Another change added to the proposal by Zfnd is to "Call for, and incentivize, development of decentralized voting and governance."
+[ZIP 1012](https://github.com/ZcashFoundation/zips/blob/master/zip-1012.rst), as it has become, involves extending the block reward for 4 years at 20%, with 35% going to ECC, 25% to Zfnd, and 40% for additional "Major Grants". Changes to the proposal involve making it more directly controlled by Zfnd, and removing a restriction that would have excluded ECC from receiving any funding as part of "major grants". Another change added to the proposal by Zfnd is to "Call for, and incentivize, development of decentralized voting and governance."
+
+The Zcash Foundation also [donated](https://www.coindesk.com/zcash-foundation-funds-app-mixing-private-messaging-and-payments) $40,000 to Open Privacy for development of [Cwtch](https://openprivacy.ca/work/cwtch/), a decentralized messaging and payments platform.
+
+IOTA got itself in a tangle and was [halted](https://cryptobriefing.com/iota-halts-15-hours-from-coordinator-bug/) for 15 hours due to a bug with the Coordinator. 
+
+Jack Dorsey of Twitter [announced](https://twitter.com/jack/status/1204766078468911106) that Twitter would fund research into a decentralized version of its platform. 
 
 
 
-https://www.coindesk.com/zcash-foundation-funds-app-mixing-private-messaging-and-payments
-
-
+https://www.newsbtc.com/2019/12/30/this-cryptocurrency-plunges-14-with-rumors-that-big-investors-are-dumping/ - see how it develops
 
 https://bitcoinist.com/making-a-dash-for-it-moocowmoo-disappears/ {I think the funds subsequently reappeared, will check for link}
 
@@ -232,9 +236,7 @@ https://www.coindesk.com/chinas-internet-firewall-has-blocked-access-to-ethereum
 
 https://ciphertrace.com/wp-content/uploads/2019/11/CipherTrace-Cryptocurrency-Anti-Money-Laundering-Report-2019-Q3.pdfasasasas
 
-https://keybase.io/a/i/r/d/r/o/p/spacedrop2019
-
-
+The Stellar airdrop on Keybase has been [ended](https://keybase.io/a/i/r/d/r/o/p/spacedrop2019) prematurely due to a sharp increase in junk sign-ups, with 100,000 accounts being excluded and the final allocation of Lumens being divided between 282,000 users.
 
 /r/ethtrader special memberships
 https://twitter.com/carllarson/status/1207452900357746690?s=20
@@ -250,7 +252,7 @@ https://github.com/metacartel/MCV/blob/master/Whitepaper.pdf
 
 Algorand relay nodes voted to [accept](https://algorand.foundation/long-term-vesting-plan-vote-result) an [amendment](https://algorandfoundation.cdn.prismic.io/algorandfoundation/eb2a8c69-2262-42f8-99a4-09df485207b5_EIP-11252019AF_+Conditional+Accelerated+Vesting+Nov+30.pdf) to the vesting schedule of the tokens they received as grants from the Algorand Foundation. This amendment increases the number of Algo tokens relay nodes will receive by 25%, but extends the vesting schedule from 2 to 5 years, with a mechanism to speed it up if the Algo price rises. This concludes an [episode](https://algorand.foundation/voting-procedure-eip09092019pc) which started and was missed in Sep, with relay nodes voting to suspend their own rewards until a change to the vesting schedule could be agreed.
 
-There are around 81 Algorand relay nodes and these proposals were approved with yes votes from around 55 nodes. The Algorand nodes have completed KYC/AML checks and entered into a legal agreement with the foundation, such that part of the voting process for these proposals involved using DocuSign to sign and return copies of the amendment to the Foundation.
+There are around 81 Algorand relay nodes and these proposals were approved with yes votes from around 55 nodes. The Algorand nodes have completed KYC/AML checks and entered into a legal agreement with the foundation, such that part of the voting process for these proposals involved using DocuSign to sign and return copies of the amendment to the Foundation. KYC/AML checks are also [mandatory](https://algorand.foundation/200millionalgo-staking-rewards-kyc-extended) for Algo holders who wish to participate in staking and receive rewards.
 
 
 
