more people numbers

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -66,8 +66,8 @@ Community stats:
 - Twitter followers: 40,897 (+256)
 - Reddit subscribers: 9,708 (+5)
 - Matrix users: 504 (+30)
-- Slack users: {} (+{})
-- Discord users: {}, verified to post: {}
+- Slack users: 6,881 (+9)
+- Discord users: 2,628 (+36), verified to post: 407 (+28)
 - Telegram users: 2,838 (-65)
 - YouTube subscribers: 3,960 (+40)
 - Facebook followers: 3,552 (+245, likes: 3,223 (+196)
