--- a/journal/201912.md
+++ b/journal/201912.md
@@ -154,11 +154,21 @@ Upcoming:
 
 Selected articles:
 
-- https://medium.com/@_Checkmatey_/decred-hypersecure-unforgeably-scarce-e076b91a2be {this was in prev issue}
-- https://medium.com/@permabullnino/decred-on-chain-the-ticket-pool-vwap-d0a3d1c42a3
-- https://medium.com/decred/does-decred-have-the-answers-to-on-chain-governance-d35bdd176f59?
-- https://www.blockcommons.red/publication/staking/
-- 
+- https://medium.com/@_Checkmatey_/decred-hypersecure-unforgeably-scarce-e076b91a2be {rr:this was in prev issue}
+
+- Decred On-Chain: The Ticket Pool VWAP by @permabullnino ([medium](https://medium.com/@permabullnino/decred-on-chain-the-ticket-pool-vwap-d0a3d1c42a3))
+
+- Does Decred have the answers to on-chain governance? by Kerman Kohli, missed in Nov ([medium](https://medium.com/decred/does-decred-have-the-answers-to-on-chain-governance-d35bdd176f59))
+
+- Overview of 'staking' in a variety of projects by @richardred ([blockcommons.red](https://www.blockcommons.red/publication/staking/))
+
+- It’s Time to Walk-the-Talk on Decentralized Governance by @jy-p, part of Coindesk's year in review ([coindesk](https://www.coindesk.com/its-time-to-walk-the-talk-on-decentralized-governance))
+
+- Introducing DownloadHawk by @degeri ([blog.decred.org](https://blog.decred.org/2019/12/16/Introducing-DownloadHawk/))
+
+  
+
+  
 
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
@@ -168,14 +178,16 @@ Translations:
 
 Videos:
 
-- {}
+- Decred Assembly Deep Dive - Lightning Network with @matheusd ([youtube](https://www.youtube.com/watch?v=N3WO5YXpD7M))
 
 Audio:
 
 - {}
-- PoV Crypto - 105 — Fight Night XI: BTC vs ETH vs DCR, with Checkmate - ([youtube](https://youtu.be/7m1kfM0fqaE))
+- PoV Crypto - 105 — Fight Night XI: BTC vs ETH vs DCR, with Checkmate. An in depth debate of the Bitcoin, Ethereum and Decred perspectives on a variety of blockchain subjects. ([youtube](https://youtu.be/7m1kfM0fqaE))
 - Decred in Depth Ep. 15 features @davecgh giving an in depth overview of v1.5 and the block header commitments consensus rule change proposal. Dave covers the detail of what the proposal involves, and the ways in which it will enhance the network if approved. ([soundcloud](https://soundcloud.com/decredindepth/ep-15-dave-collins-btc-suite-origins-dcrd-15))
 - Decred in Depth Ep. 14 - @matheusd talks about getting into Lightning Network development through his work on ticket-splitting, the challenges of porting Lightning Labs lnd to Decred, and the various ways in which the basis in btcd helps. ([soundcloud](https://soundcloud.com/decredindepth/ep-14-matheus-degiovani-dcr-lightning-network))
+- Off the Chain - How Crypto is Bridging the Gap Between the Banked and Unbanked - @akin has an extensive interview with Pomp about cryptocurrency and Africa. ([spotify](https://open.spotify.com/episode/1FGOnQb84YpGTZfwbEzdAg))
+- Cigars and Crypto - @akin talks about Africa and Decred. ([anchor.fm](https://anchor.fm/investnoir3/episodes/Episode-73---AkinSawyerr-e9pnmu))
 
 
 ## Community Discussions
@@ -188,30 +200,27 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- https://www.reddit.com/r/decred/comments/ecvjaj/the_decred_security_curve_you_want_to_double/
-This post linking to a twitter thread attracted 39 comments in which one user argued that exchanges could execute an attack where they drained the treasury, at length.
-
-https://www.reddit.com/r/decred/comments/e8v7pd/other_than_staking_sending_to_exchanges_what/
-
-
+- This [post](https://www.reddit.com/r/decred/comments/ecvjaj/the_decred_security_curve_you_want_to_double/) linking to a twitter thread about Decred's security attracted 39 comments in which one user argued at length that exchanges could execute an attack where they drained the treasury.
+- This [post](https://www.reddit.com/r/decred/comments/e8v7pd/other_than_staking_sending_to_exchanges_what/) asked what people use Decred for other than staking and sending to exchanges.
 
 Selected Twitter action:
 
 - Bug [Bounty](https://twitter.com/decredproject/status/1208067535532437511) hunters, check out v1.5.
 - A @decredproject [poll](https://twitter.com/decredproject/status/1207060170855141376) asking about the most noteworthy achievement of 2019 had 475 responses. 37% went for Privacy, 33% for Politeia/DAO, 19% for Lightning Network and 11% for DEX.
-
 - Merry [Stakemas](https://twitter.com/DCRComic/status/1209541923737886721) from @DCRComic and [Dcristmas](https://twitter.com/AGNFAB1/status/1208044700634157056) from @AGNFAB1
+- @buck54321's [campaign](https://twitter.com/blockchainbuck/status/1201988834575224832) for the TinyDecred proposal targetted older voters
+- @exitus [tweeting](https://twitter.com/coveryfire7777/status/1208499268987867138) about v1.5 Dark Mode
+- @Dustorf's [year](https://twitter.com/lefebvre_dustin/status/1207756052382593026) in Decred
+- @degeri announces [DownloadHawk](https://twitter.com/degeri_crypto/status/1206639882485075968) which watches the Decred downloads and raises the alarm if they're tampered with.
+- @ammarooni [thread](https://twitter.com/Ammarooni/status/1208060799736004611) about Decred as Bitcoin's younger sibling
 
 DCRComic:
 - [DEX](https://twitter.com/DCRComic/status/1211672109321248768)
 - [Ticket Rick](https://twitter.com/DCRComic/status/1204049820350111744) - a reference to Pickle Rick from the Rick & Morty animated show.
 - [Collective Intelligence](https://twitter.com/DCRComic/status/1202601872919543811)
 
-- @buck54321's [campaign](https://twitter.com/blockchainbuck/status/1201988834575224832) for the TinyDecred proposal targetted older voters
-- @exitus [tweeting](https://twitter.com/coveryfire7777/status/1208499268987867138) about v1.5 Dark Mode
-- @Dustorf's [year](https://twitter.com/lefebvre_dustin/status/1207756052382593026) in Decred
-- @degeri announces [DownloadHawk](https://twitter.com/degeri_crypto/status/1206639882485075968) which watches the Decred downloads and raises the alarm if they're tampered with.
-- https://twitter.com/DCRComic/status/1204049820350111744
+  
+
 
 ## Markets
 
