--- a/journal/201912.md
+++ b/journal/201912.md
@@ -154,10 +154,12 @@ Upcoming:
 
 Selected articles:
 
-- https://medium.com/@_Checkmatey_/decred-hypersecure-unforgeably-scarce-e076b91a2be
+- https://medium.com/@_Checkmatey_/decred-hypersecure-unforgeably-scarce-e076b91a2be {this was in prev issue}
 - https://medium.com/@permabullnino/decred-on-chain-the-ticket-pool-vwap-d0a3d1c42a3
 - https://medium.com/decred/does-decred-have-the-answers-to-on-chain-governance-d35bdd176f59?
 - https://www.blockcommons.red/publication/staking/
+- 
+
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
@@ -171,6 +173,10 @@ Videos:
 Audio:
 
 - {}
+- PoV Crypto - 105 — Fight Night XI: BTC vs ETH vs DCR, with Checkmate - ([youtube](https://youtu.be/7m1kfM0fqaE))
+- Decred in Depth Ep. 15 features @davecgh giving an in depth overview of v1.5 and the block header commitments consensus rule change proposal. Dave covers the detail of what the proposal involves, and the ways in which it will enhance the network if approved. ([soundcloud](https://soundcloud.com/decredindepth/ep-15-dave-collins-btc-suite-origins-dcrd-15))
+- Decred in Depth Ep. 14 - @matheusd talks about getting into Lightning Network development through his work on ticket-splitting, the challenges of porting Lightning Labs lnd to Decred, and the various ways in which the basis in btcd helps. ([soundcloud](https://soundcloud.com/decredindepth/ep-14-matheus-degiovani-dcr-lightning-network))
+
 
 ## Community Discussions
 
@@ -182,11 +188,30 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- {}
+- https://www.reddit.com/r/decred/comments/ecvjaj/the_decred_security_curve_you_want_to_double/
+This post linking to a twitter thread attracted 39 comments in which one user argued that exchanges could execute an attack where they drained the treasury, at length.
 
-Selected Twitter discussions:
+https://www.reddit.com/r/decred/comments/e8v7pd/other_than_staking_sending_to_exchanges_what/
 
-- {}
+
+
+Selected Twitter action:
+
+- Bug [Bounty](https://twitter.com/decredproject/status/1208067535532437511) hunters, check out v1.5.
+- A @decredproject [poll](https://twitter.com/decredproject/status/1207060170855141376) asking about the most noteworthy achievement of 2019 had 475 responses. 37% went for Privacy, 33% for Politeia/DAO, 19% for Lightning Network and 11% for DEX.
+
+- Merry [Stakemas](https://twitter.com/DCRComic/status/1209541923737886721) from @DCRComic and [Dcristmas](https://twitter.com/AGNFAB1/status/1208044700634157056) from @AGNFAB1
+
+DCRComic:
+- [DEX](https://twitter.com/DCRComic/status/1211672109321248768)
+- [Ticket Rick](https://twitter.com/DCRComic/status/1204049820350111744) - a reference to Pickle Rick from the Rick & Morty animated show.
+- [Collective Intelligence](https://twitter.com/DCRComic/status/1202601872919543811)
+
+- @buck54321's [campaign](https://twitter.com/blockchainbuck/status/1201988834575224832) for the TinyDecred proposal targetted older voters
+- @exitus [tweeting](https://twitter.com/coveryfire7777/status/1208499268987867138) about v1.5 Dark Mode
+- @Dustorf's [year](https://twitter.com/lefebvre_dustin/status/1207756052382593026) in Decred
+- @degeri announces [DownloadHawk](https://twitter.com/degeri_crypto/status/1206639882485075968) which watches the Decred downloads and raises the alarm if they're tampered with.
+- https://twitter.com/DCRComic/status/1204049820350111744
 
 ## Markets
 
