--- a/journal/201912.md
+++ b/journal/201912.md
@@ -330,6 +330,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, richardred
 - reviews and feedback: {}
 - title image: {}
