--- a/journal/201912.md
+++ b/journal/201912.md
@@ -155,8 +155,10 @@ Attended:
 
 - Nov 6 - [Bitcoin & Blockchains Meetup](https://www.facebook.com/events/1444182132424731/) - Oaxaca, Mexico. @evok3d represented Decred. ([photos](https://twitter.com/ev0k3d/status/1192945388329807874), _missed in Nov_)
 - Dec 4 - [Decred Demo](https://www.meetup.com/blockchaincentre/events/266659342/) - Melbourne, Australia. @eSizeDave and @zohand were invited to present Decred at Blockchain Centre's newly introduced Talk & Trade format. The demo of Politeia and Decrediton was expected to take 30 minutes but the total time surpassed 1.5 hours, which allowed to talk about key aspects of Decred and have a debate among the ~20 participants. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191204-blockchain-centre-talk-and-trade-melbourne-australia.md))
+- Dec 7 - Blockchain Communities Meetup - Mexico City, Mexico. Organized by Blockchain Bajio at Bitcoin Embassy Bar. (photos: [1](https://twitter.com/Decred_ES/status/1204144823231488000), [2](https://twitter.com/BlockchainBajio/status/1209141039086362624), [3](https://twitter.com/NancyNSalazar/status/1209143989984808961))
 - Dec 12-13 - [Labitconf](https://www.labitconf.com/) - Montevideo, Uruguay. A team of 7 Decred Latam ambassadors presented the project during 2 days of the event. Previous efforts to build awareness in Latam became evident as many projects attending the event knew about Decred. Having no booth in a single place allowed the team to be everywhere, and they suggest to consider this approach for events of this size (~1000 visitors). Check the [full report](https://github.com/decredcommunity/events/blob/master/reports/20191212-labitconf-montevideo-uruguay.md) for notable interactions and other details.
 - Dec 15 - [Crypto & Christmas](https://www.meetup.com/blockchaincentre/events/267037974/) - Melbourne, Australia. Decred Australia organized a party together with Blockchain Centre, Cointree and e-Pocket. @eSizeDave and @zohand gave a brief intro to Decred and its achievements to ~20 attendees and used the opportunity to engage with them more directly. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191215-crypto-and-christmas-melbourne-australia.md))
+- Dec 20 - Bitcoin Embassy Bar [First Anniversary Meetup](https://twitter.com/Decred_ES/status/1207380289107959809) - Mexico City, Mexico. (photos: [1](https://twitter.com/Decred_ES/status/1208204612215418887), [2](https://twitter.com/Decred_ES/status/1208257098565345282))
 
 Upcoming:
 
