--- a/journal/201912.md
+++ b/journal/201912.md
@@ -52,24 +52,17 @@ https://twitter.com/decredproject/status/1206661133161127936
 
 Other:
 
-- degeri's site compromise notifier https://twitter.com/degeri_crypto/status/1206639882485075968 https://github.com/degeri/DownloadHawk
-- bug bounty announcement {more details degeri?} https://twitter.com/decredproject/status/1208067535532437511
+- degeri's site compromise notifier https://twitter.com/degeri_crypto/status/1206639882485075968 https://github.com/degeri/DownloadHawk 
+- bug bounty announcement {more details degeri? no further details --degeri} https://twitter.com/decredproject/status/1208067535532437511
 
 Dev activity stats for December: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
 
 ## People
 
-Welcome to new first time contributors with code merged to master: {list people who made meaningful commits merged in master branches, ordered by repo importance, format as: username ([repo](link to user's commits))}
+Congratulations to the contributor listed on [decred.org](https://decred.org/contributors/):
 
-Congratulations to {n} contributors listed on [decred.org](https://decred.org/contributors/):
+- Amir Massarwa (amass, Developer)
 
-- {name, sort names alphabetically} ({nickname}, {title})
-
-{welcome new individual and company contractors listed on decred.org}
-
-{updates from existing contractors}
-
-{interviews about people}
 
 Community stats:
 
