--- a/journal/201912.md
+++ b/journal/201912.md
@@ -223,13 +223,13 @@ In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4Dh
 
 {cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
 
-Hashrate: December's hashrate opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate distribution as of {date}: {pool name n%, ...} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: December's hashrate opened at ~440 Ph/s and closed ~400 Ph/s, bottoming at 306 Ph/s and peaking at 486 Ph/s throughout the month. Pool hashrate distribution as of Jan 2nd: Poolin 31.7%, UUPool 24%, lab.antpool.com 11.9%, f2pool 2.2%, BTC.com 1.8%, BeePool 0.09%, Coinmine 0.09%, suprnova 0.02%, Luxor 0.02% and others 28%  per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
 {helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
-Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. The price varied between {n.n}-{n.n} DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply.
+Staking: 30-day average ticket price was 137.53 DCR (−2.73) per dcrstats.com. The price varied between 123-158.76 DCR. Locked amount was 5.41-5.59 million DCR, which corresponded to 49.95-51.8% of the available supply.
 
-{recap of ticket price action if it was interesting}
+Once again the ticket price made a new high of 158.71 since the sdiff algorithm change, while the 51.8% is the new all-time high of stake participation.
 
 {helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
 
