--- a/journal/201912.md
+++ b/journal/201912.md
@@ -279,6 +279,30 @@ Much of the rest of the month focused on reflection, discussion, and planning fo
 
 Ditto is collecting ideas for their 3rd PR proposal https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$157609160161317ZZSti:decred.org
 
+Ditto's December achievements:
+
+* Placed CoinDesk Year-in-Review [op-ed](https://www.coindesk.com/its-time-to-walk-the-talk-on-decentralized-governance) by Jake about decentralized governance “It’s Time to Walk the Talk on Decentralized Governance”.
+
+* CoinDesk [article](https://www.coindesk.com/planned-sale-of-org-angers-many-open-source-crypto-developers) on the sale of .org domains, which includes a quote from Richardred.
+
+* Off the Chain [podcast](https://www.youtube.com/watch?v=NNg5G_EZxtU&feature=youtu.be) with Anthony Pompliano and Akin, talking about crypto in Africa and Decred’s unique governance
+
+* NasdaqTV TradeTalks [segment](https://www.nasdaq.com/videos/tradetalks%3A-blockchain-emerging-technologies-in-africa) with Akin talking about blockchain in Africa.
+
+* Arranged and attended a media tour with Akin in NYC, where he met in  person with reporters at The Block, Fortune, Pomp’s Off the Chain  podcast, and the Chain Reaction podcast (pending publication).
+
+* Secured Cigars and Crypto [podcast](https://anchor.fm/investnoir3/episodes/Episode-73---AkinSawyerr-e9pnmu) with Akin, which aired on Christmas Day.
+
+* Prepared panel briefing doc and conducted media outreach for Akin’s  participation at the Digital Money Forum at CES (Tuesday, January 7).  Arranged for him to speak on the “The Libra Effect” [panel](https://thedigitalmoneyforum.com/2020-agenda/), alongside Michael Casey of CoinDesk and Dante Disparte of the Libra Association.
+
+* Spearheaded Decred’s most noteworthy achievement of 2019 Twitter [poll](https://twitter.com/decredproject/status/1207060170855141376). The winner was the privacy implementation, with 36.6% of the vote, followed by Politeia & DAO progress (33.1%). 475 people participated in the poll.
+
+* Identified and shared opportunities for the community to engage with Crypto Twitter and educate outsiders about Decred. Lately, the community has been abuzz on the unique contractor model at Decred, particularly  for developers. With the community contributing more than 40 unique posts using #cryptodevs and a new handle @dcrgoodfirst as a new aggregate of good first issues for developers interested in contributing to Decred.
+
+* Developed Phase 3 Ditto PR proposal, which will be live on Politeia mid-January.
+
+
+
 ## Events
 
 Attended:
