Dev dcrd simplify and reword

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -21,14 +21,12 @@ https://twitter.com/decredproject/status/1206661133161127936
 
 [dcrd](https://github.com/decred/dcrd):
 
-Checkpoint logic in blockchain module [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on only the headers being available. {SB: can we put in context of latest consensus changes (assuming related to that)?}. Checkpoints are now also configurable, allowing the caller to customize the checkpoints as it sees fit, such as adding custom checkpoints or removing default checkpoints. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
+Checkpoint logic [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on headers alone. {SB: can we put in context of latest consensus changes (assuming related to that)?}. Checkpoints are now also configurable by the caller. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
 
-The blockchain module also modified to accept [hash](https://github.com/decred/dcrd/pull/2022) in next work diff calcs. This is part of an overall effort to make the blockchain module more explicit and less reliant on the current state.
-
-Memory usage of conditional execution logic of txscript [optimized](https://github.com/decred/dcrd/pull/2011) by replacing the condition stack with two integers.
+Memory usage of conditional execution logic in txscript [optimized](https://github.com/decred/dcrd/pull/2011) by replacing the condition stack with two integers.
 
 Support for bech32 enhanced with convenience functions [added](https://github.com/decred/dcrd/pull/2025) and 
-[ensuring](https://github.com/decred/dcrd/pull/2024) HRP is lowercase to comply with BIP173. 
+[ensuring](https://github.com/decred/dcrd/pull/2024) the human-readable part is lowercase to comply with BIP173. 
 
 Memory leak [fixed](https://github.com/decred/dcrd/pull/2027) that was specially relevant for setups that involve wallets with very large number of addresses.
 
