Dev dcrwallet add missed

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -34,6 +34,8 @@ Memory leak [fixed](https://github.com/decred/dcrd/pull/2027) that was specially
 
 createrawtransaction JSON-RPC method [implemented](https://github.com/decred/dcrwallet/pull/1623) directly in dcrwallet so it may be called in SPV syncing mode or when the wallet is not syncing. It was previously only implemented in dcrd and was usable from dcrwallet in RPC syncing mode.
 
+txsizes package was [exported](https://github.com/decred/dcrwallet/pull/1573) for reuse by dcrdex and dcrdata.
+
 [Decrediton](https://github.com/decred/decrediton): {}
 
 bug fixes, dependency upgrades, 
