add governance txt

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -135,7 +135,11 @@ Community stats:
 
 In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,406 DCR and spent 10,106 DCR. Using December's daily average DCR/USD rate of $18.32, this is $264K received and $185K spent. At November's average daily rate of $19.97, the USD figure billed for work completed in that month is $202K. As of Jan 1, Treasury balance is 643,836 DCR (10.9 million USD at $16.87).
 
-{high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
+December was an unusually quiet month for Politeia, with no new proposals submitted. Two proposals from Nov were voted on in Dec. The [TinyDecred budget](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451) proposal was approved with 85% approval and voter participation of 32.6%. The [PlusBit POS App](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605) was rejected with 39% approval and participation of 30.6%.
+
+Following analysis of the public orderbooks which raised questions about the level of liquidity provision, i2 Trading have provided full trading history logs that will allow for their performance to be scrutinized in detail. Company 0 are working on a set of tools for auditing i2's performance in relation to the criteria specified in their proposal.
+
+Politeia Digest has been taking a break while the level of politeia activity is low, it will return when new proposals are submitted.
 
 ## Network
 
@@ -333,9 +337,9 @@ There was very little support for proposals that did not continue to dedicate 20
 
 77 forum users (of 104 eligible) voted on the proposals (accounts created after March 2019 were not eligible). #12 did the best among this group with 70% approval, #13 also did well with over 50% support.
 
-1% of all the circulating ZEC [voted](https://twitter.com/zooko/status/1200917828011876352?s=20) in the unofficial stake-weighted poll, the most popular options with this constituency were #10 and #8 (just 2 more years of 20% funding for ECC).
+1% of all the circulating ZEC [voted](https://twitter.com/zooko/status/1200917828011876352?s=20) in the unofficial stake-weighted poll, the most popular options within this constituency were #10 and #8 (just 2 more years of 20% funding for ECC).
 
-The Zcash Foundation decided to develop option #12 with some improvements, the rolled [back](https://www.zfnd.org/blog/proposed-nu4-zip/) on most of the improvements in response to pushback. The final slightly amended version of the proposal will be put to another community panel and forum user vote to confirm it.
+The Zcash Foundation decided to develop option #12 with some improvements, then rolled [back](https://www.zfnd.org/blog/proposed-nu4-zip/) on most of the improvements in response to pushback. The final slightly amended version of the proposal will be put to another community panel and forum user vote to confirm it.
 
 [ZIP 1012](https://github.com/ZcashFoundation/zips/blob/master/zip-1012.rst), as it has become, involves extending the block reward for 4 years at 20%, with 35% going to ECC, 25% to Zfnd, and 40% for additional "Major Grants". Changes to the proposal involve making it more directly controlled by Zfnd, and removing a restriction that would have excluded ECC from receiving any funding as part of "major grants". Another change added to the proposal by Zfnd is to "Call for, and incentivize, development of decentralized voting and governance."
 
