Dev drop dcrstakepool, fill dcrpool

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -42,15 +42,7 @@ Numerous bugs squashed, including a bug in [Trezor wallet](https://github.com/de
 
 [Politeia](https://github.com/decred/politeia): {}
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): {}
-
-Bug fixes, dep upgrades
-
-* Note version requirement for limit_req delay param: https://github.com/decred/dcrstakepool/pull/580
-
-* build: upgrade deps: https://github.com/decred/dcrstakepool/pull/576
-
-[dcrpool](https://github.com/decred/dcrpool): {}
+[dcrpool](https://github.com/decred/dcrpool): Added payment request [processing](https://github.com/decred/dcrpool/pull/140) {dnldd, how does it work? do accounts request payments manually?}, added extensive [test coverage](https://github.com/decred/dcrpool/pull/141) for most components.
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
 
