Dev dcrlnd cleanup

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -44,25 +44,11 @@ Numerous bugs squashed, including a bug in [Trezor wallet](https://github.com/de
 
 [dcrpool](https://github.com/decred/dcrpool): Added payment request [processing](https://github.com/decred/dcrpool/pull/140) {dnldd, how does it work? do accounts request payments manually?}, added extensive [test coverage](https://github.com/decred/dcrpool/pull/141) for most components.
 
-[dcrlnd](https://github.com/decred/dcrlnd): {}
+[dcrlnd](https://github.com/decred/dcrlnd):
 
-Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/) {SB: ready to make public?}. Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you’re comfortable with operations you want to do on mainnet, and not use large amounts. 
+Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/) {SB: ready to make public?}. Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you're comfortable with operations you want to do on mainnet, and not use large amounts. 
 
-Port selection [modified](https://github.com/decred/dcrlnd/pull/62) to make integration tests made more robust.
-
-Docker build [added](https://github.com/decred/dcrlnd/commit/388265fd359d94431db3c719f62bb27e0a8a1cc1). Work continues on [Docker examples](https://github.com/decred/dcrlnd/pull/66) to automate signet environments and build a Minimum Voting Wallet (MVW).  
-
-Closed:
-
-* multi: remove chain namespacing: https://github.com/decred/dcrlnd/pull/68
-
-* github: add docker build job: https://github.com/decred/dcrlnd/pull/67
-
-Open:
-
-* Verify chainntfs in case of disapproved blocks: https://github.com/decred/dcrlnd/issues/69
-
-* Network command line switches for `dcrlnd` and `dcrlncli`: https://github.com/decred/dcrlnd/pull/72
+Port selection [modified](https://github.com/decred/dcrlnd/pull/62) to make integration tests more robust. Docker build [added](https://github.com/decred/dcrlnd/pull/67). Work continues on [Docker examples](https://github.com/decred/dcrlnd/pull/66) to automate signet environments and build a Minimum Voting Wallet (MVW). 
 
 [cspp](https://github.com/decred/cspp): {}
 
@@ -160,6 +146,8 @@ Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes p
 {any interesting analysis or events in the network}
 
 Mixing use https://twitter.com/lefebvre_dustin/status/1205224368407748616 {where these stats are coming from?}
+
+mainnet LN shows 4 nodes as of Jan 5 https://ln-map.jamieholdstock.com/
 
 ## Mining
 
