--- a/journal/201912.md
+++ b/journal/201912.md
@@ -50,9 +50,19 @@ Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/) {S
 
 Port selection [modified](https://github.com/decred/dcrlnd/pull/62) to make integration tests more robust. Docker build [added](https://github.com/decred/dcrlnd/pull/67). Work continues on [Docker examples](https://github.com/decred/dcrlnd/pull/66) to automate signet environments and build a Minimum Voting Wallet (MVW). 
 
-[cspp](https://github.com/decred/cspp): {}
+[dcrdex](https://github.com/decred/dcrdex):
 
-[dcrdex](https://github.com/decred/dcrdex): {}
+New components implemented:
+
+- [BTC exchange wallet](https://github.com/decred/dcrdex/pull/72)
+- [client orderbook backend](https://github.com/decred/dcrdex/pull/79)
+- [MarketTunnel](https://github.com/decred/dcrdex/pull/85) {what does MarketTunnel do?}
+
+Other changes:
+
+- [order commitments](https://github.com/decred/dcrdex/pull/83) added to spec
+- order timestamp resolution changed from seconds to [milliseconds](https://github.com/decred/dcrdex/pull/96)
+- completed switch to [coin ID](https://github.com/decred/dcrdex/pull/91)
 
 [dcrandroid](https://github.com/decred/dcrandroid): {}
 
