Dev dcrandroid cleanup

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -64,20 +64,13 @@ Other changes:
 - order timestamp resolution changed from seconds to [milliseconds](https://github.com/decred/dcrdex/pull/96)
 - completed switch to [coin ID](https://github.com/decred/dcrdex/pull/91)
 
-[dcrandroid](https://github.com/decred/dcrandroid): {}
+[dcrandroid](https://github.com/decred/dcrandroid):
 
-Bug fixes, UI tweaks
+Major redesign to the user interface to implement [multi-wallet support](https://github.com/decred/dcrandroid/pull/401) (running more than one wallet concurrently) finally merged after many months of work. This required rewriting most of the Java code in Kotlin. All wallets are opened at startup using the same public passphrase. On the backend, multi-wallet support was [added](https://github.com/raedahgroup/dcrlibwallet/pull/57) to dcrlibwallet, which uses a copy of dcrwallet's SPV module to sync all wallets in one process.
 
-Major redesign to the user interface to implement [multi wallet support](https://github.com/decred/dcrandroid/pull/401) (running more than one wallet concurrently). This required rewriting most of the Java code in Kotlin. All wallets are opened at startup using the same public passphrase. On the backend, multi wallet support was [added](https://github.com/raedahgroup/dcrlibwallet/pull/57) to dcrlibwallet, which uses a copy of the SPV module to sync all wallets in one process. 
+Other UI improvements include showing progress bar and estimated time remaining when [rescanning](https://github.com/decred/dcrandroid/pull/414) and the QR code scanner gaining the ability to detect [payment amounts](https://github.com/decred/dcrandroid/pull/411).
 
-Other UI improvements include a showing progress bar and estimated time remaining when [rescanning](https://github.com/decred/dcrandroid/pull/414) and the QR code scanner gaining the ability to [detect](https://github.com/decred/dcrandroid/pull/411) payment amounts. 
-
-This month also saw significant security enhancements. Users can now unlock the app with their [fingerprint](https://github.com/decred/dcrandroid/pull/413), text fields [disabled](https://github.com/decred/dcrandroid/pull/419) when processing, and address validation was [added](https://github.com/decred/dcrandroid/pull/421) to security tools 
-
-Closed:
-
-* multi: verify dialog instance existence before creating a new instance: https://github.com/decred/dcrandroid/pull/417
-
+This month also saw significant security enhancements. Users can now unlock the app with their [fingerprint](https://github.com/decred/dcrandroid/pull/413), and address validation was [moved](https://github.com/decred/dcrandroid/pull/421) to security tools.
 
 [dcrios](https://github.com/raedahgroup/dcrios): {}
 
