Dev dcrios polish

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -72,12 +72,11 @@ Other UI improvements include showing progress bar and estimated time remaining 
 
 This month also saw significant security enhancements. Users can now unlock the app with their [fingerprint](https://github.com/decred/dcrandroid/pull/413), and address validation was [moved](https://github.com/decred/dcrandroid/pull/421) to security tools.
 
-[dcrios](https://github.com/raedahgroup/dcrios): {}
+[dcrios](https://github.com/raedahgroup/dcrios):
 
-UI enhancements continue with updated [colors](https://github.com/raedahgroup/dcrios/pull/556), [improved](https://github.com/raedahgroup/dcrios/pull/555) menu rendering. 
+UI enhancements continue with updated [colors](https://github.com/raedahgroup/dcrios/pull/556) and [improved](https://github.com/raedahgroup/dcrios/pull/555) menu rendering. 
 
-Work continues on [multiwallet support](https://github.com/raedahgroup/dcrios/pull/558), revamped UI for [send](https://github.com/raedahgroup/dcrios/pull/557) and [receive](https://github.com/raedahgroup/dcrios/pull/553) screens.
-
+Work continues on [multi-wallet](https://github.com/raedahgroup/dcrios/pull/558) support, revamped UI for [send](https://github.com/raedahgroup/dcrios/pull/557) and [receive](https://github.com/raedahgroup/dcrios/pull/553) views.
 
 [dcrdata](https://github.com/decred/dcrdata): {}
 
