--- a/journal/201912.md
+++ b/journal/201912.md
@@ -78,7 +78,7 @@ UI enhancements continue with updated [colors](https://github.com/raedahgroup/dc
 
 Work continues on [multi-wallet](https://github.com/raedahgroup/dcrios/pull/558) support, revamped UI for [send](https://github.com/raedahgroup/dcrios/pull/557) and [receive](https://github.com/raedahgroup/dcrios/pull/553) views.
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrdata](https://github.com/decred/dcrdata): Merged CSPP initial [mix detection](https://github.com/decred/dcrdata/pull/1610), bug fixes and code maintenance.
 
 [tinydecred](https://github.com/decred/tinydecred): {}
 
