Dev prettify todos

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -21,7 +21,7 @@ https://twitter.com/decredproject/status/1206661133161127936
 
 [dcrd](https://github.com/decred/dcrd):
 
-Checkpoint logic [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on headers alone. {SB: can we put in context of latest consensus changes (assuming related to that)?}. Checkpoints are now also configurable by the caller. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
+Checkpoint logic [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on headers alone. { SB: can we put in context of latest consensus changes (assuming related to that)? }. Checkpoints are now also configurable by the caller. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
 
 Memory usage of conditional execution logic in txscript [optimized](https://github.com/decred/dcrd/pull/2011) by replacing the condition stack with two integers.
 
@@ -40,13 +40,13 @@ txsizes package was [exported](https://github.com/decred/dcrwallet/pull/1573) fo
 
 Numerous bugs squashed, including a bug in [Trezor wallet](https://github.com/decred/decrediton/pull/2362) that could be triggered if the Trezor wallet received funds from a non-dcrwallet sender that did not set the Sequence field of the authored transaction to MaxTxInSequenceNum.
 
-[Politeia](https://github.com/decred/politeia): Backend work to support CMS, bug fixes. Initial work to redesign CMS [merged](https://github.com/decred/politeiagui/pull/1605). {more info welcome} {how politeiagui 1605 is different from 1625?}
+[Politeia](https://github.com/decred/politeia): Backend work to support CMS, bug fixes. Initial work to redesign CMS [merged](https://github.com/decred/politeiagui/pull/1605). { more info welcome } { how politeiagui 1605 is different from 1625? }
 
-[dcrpool](https://github.com/decred/dcrpool): Added payment request [processing](https://github.com/decred/dcrpool/pull/140) {dnldd, how does it work? do accounts request payments manually?}, added extensive [test coverage](https://github.com/decred/dcrpool/pull/141) for most components.
+[dcrpool](https://github.com/decred/dcrpool): Added payment request [processing](https://github.com/decred/dcrpool/pull/140) { dnldd, how does it work? do accounts request payments manually? }, added extensive [test coverage](https://github.com/decred/dcrpool/pull/141) for most components.
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
-Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/) {SB: ready to make public?}. Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you're comfortable with operations you want to do on mainnet, and not use large amounts. 
+Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/) { SB: ready to make public? }. Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you're comfortable with operations you want to do on mainnet, and not use large amounts. 
 
 Port selection [modified](https://github.com/decred/dcrlnd/pull/62) to make integration tests more robust. Docker build [added](https://github.com/decred/dcrlnd/pull/67). Work continues on [Docker examples](https://github.com/decred/dcrlnd/pull/66) to automate signet environments and build a Minimum Voting Wallet (MVW). 
 
@@ -56,7 +56,7 @@ New components implemented:
 
 - [BTC exchange wallet](https://github.com/decred/dcrdex/pull/72)
 - [client orderbook backend](https://github.com/decred/dcrdex/pull/79)
-- [MarketTunnel](https://github.com/decred/dcrdex/pull/85) {what does MarketTunnel do?}
+- [MarketTunnel](https://github.com/decred/dcrdex/pull/85) { what does MarketTunnel do? }
 
 Other changes:
 
@@ -86,11 +86,11 @@ Work continues on [multi-wallet](https://github.com/raedahgroup/dcrios/pull/558)
 - automated code formatting with [Black](https://github.com/decred/tinydecred/pull/27)
 - bug fixes and test improvements
 
-[docs](https://github.com/decred/dcrdocs): {}
+[docs](https://github.com/decred/dcrdocs):
 
 Docs [updated](https://github.com/decred/dcrdocs/pull/1005) for v1.5 release. Warning about scam airdrops [added](https://github.com/decred/dcrdocs/pull/1035). [Forking terms](https://github.com/decred/dcrdocs/pull/1018) added to Glossary.
 
-[decred.org](https://github.com/decred/dcrweb): {}
+[decred.org](https://github.com/decred/dcrweb):
 
 Minor updates, dependency upgrades.
 
