--- a/journal/201912.md
+++ b/journal/201912.md
@@ -46,9 +46,9 @@ Numerous bugs squashed, including a bug in [Trezor wallet](https://github.com/de
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
-Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/) { SB: ready to make public? }. Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you're comfortable with operations you want to do on mainnet, and not use large amounts. 
+Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/) { SB: ready to make public? }. Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you're comfortable with operations you want to do on mainnet, and not use large amounts.
 
-Port selection [modified](https://github.com/decred/dcrlnd/pull/62) to make integration tests more robust. Docker build [added](https://github.com/decred/dcrlnd/pull/67). Work continues on [Docker examples](https://github.com/decred/dcrlnd/pull/66) to automate signet environments and build a Minimum Voting Wallet (MVW). 
+Port selection [modified](https://github.com/decred/dcrlnd/pull/62) to make integration tests more robust. Docker build [added](https://github.com/decred/dcrlnd/pull/67) to Github actions.[Removed namespacing](https://github.com/decred/dcrlnd/pull/68), attention to run upstream code, because some default settings are different. Work continues on [Docker examples](https://github.com/decred/dcrlnd/pull/66) to automate simnet environments with all you need to run a LN cluster.
 
 [dcrdex](https://github.com/decred/dcrdex):
 
