--- a/journal/201912.md
+++ b/journal/201912.md
@@ -154,9 +154,7 @@ mainnet LN shows 4 nodes as of Jan 5 https://ln-map.jamieholdstock.com/
 
 ## Integrations
 
-{new items of infrastructure or updates from existing}
-
-- New VSP 99split?
+We have a new VSP [99split](https://99split.com/).
 
 Exchange integrations:
 
