--- a/journal/201912.md
+++ b/journal/201912.md
@@ -300,9 +300,7 @@ DCRComic:
 
 ## Markets
 
-In December DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
-
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+In December DCR was trading between USD 15.61-20.77 / BTC 0.0023-0.0029. The average daily rate was $18.32.
 
 ## Relevant External
 
