--- a/journal/201912.md
+++ b/journal/201912.md
@@ -28,7 +28,7 @@ Memory usage of conditional execution logic in txscript [optimized](https://gith
 Support for bech32 enhanced with convenience functions [added](https://github.com/decred/dcrd/pull/2025) and 
 [ensuring](https://github.com/decred/dcrd/pull/2024) the human-readable part is lowercase to comply with BIP173. 
 
-Memory leak [fixed](https://github.com/decred/dcrd/pull/2027) that was specially relevant for setups that involve wallets with very large number of addresses.
+Memory leak [fixed](https://github.com/decred/dcrd/pull/2027) that was especially relevant for setups that involve wallets with a very large number of addresses.
 
 [dcrwallet](https://github.com/decred/dcrwallet): Bug fixes, dependency updates.
 
@@ -196,15 +196,15 @@ Ditto's December achievements:
 
 * NasdaqTV TradeTalks [segment](https://www.nasdaq.com/videos/tradetalks%3A-blockchain-emerging-technologies-in-africa) with Akin talking about blockchain in Africa.
 
-* Arranged and attended a media tour with Akin in NYC, where he met in  person with reporters at The Block, Fortune, Pomp’s Off the Chain  podcast, and the Chain Reaction podcast (pending publication).
+* Arranged and attended a media tour with Akin in NYC, where he met in person with reporters at The Block, Fortune, Pomp’s Off the Chain  podcast, and the Chain Reaction podcast (pending publication).
 
 * Secured Cigars and Crypto [podcast](https://anchor.fm/investnoir3/episodes/Episode-73---AkinSawyerr-e9pnmu) with Akin, which aired on Christmas Day.
 
-* Prepared panel briefing doc and conducted media outreach for Akin’s  participation at the Digital Money Forum at CES (Tuesday, January 7).  Arranged for him to speak on the “The Libra Effect” [panel](https://thedigitalmoneyforum.com/2020-agenda/), alongside Michael Casey of CoinDesk and Dante Disparte of the Libra Association.
+* Prepared panel briefing doc and conducted media outreach for Akin’s participation at the Digital Money Forum at CES (Tuesday, January 7).  Arranged for him to speak on the “The Libra Effect” [panel](https://thedigitalmoneyforum.com/2020-agenda/), alongside Michael Casey of CoinDesk and Dante Disparte of the Libra Association.
 
 * Spearheaded Decred’s most noteworthy achievement of 2019 Twitter [poll](https://twitter.com/decredproject/status/1207060170855141376). The winner was the privacy implementation, with 36.6% of the vote, followed by Politeia & DAO progress (33.1%). 475 people participated in the poll.
 
-* Identified and shared opportunities for the community to engage with Crypto Twitter and educate outsiders about Decred. Lately, the community has been abuzz on the unique contractor model at Decred, particularly  for developers. With the community contributing more than 40 unique posts using #cryptodevs and a new handle @dcrgoodfirst as a new aggregate of good first issues for developers interested in contributing to Decred.
+* Identified and shared opportunities for the community to engage with Crypto Twitter and educate outsiders about Decred. Lately, the community has been abuzz on the unique contractor model at Decred, particularly for developers. With the community contributing more than 40 unique posts using #cryptodevs and a new handle @dcrgoodfirst as a new aggregate of good first issues for developers interested in contributing to Decred.
 
 * Developed Phase 3 Ditto PR proposal, which will be live on Politeia mid-January.
 
@@ -352,7 +352,7 @@ The Maker Foundation [sold](https://www.theblockcrypto.com/post/51059/makerdao-r
 
 Months after launching a custodial staking service for Tezos, the Coinbase is now exchange is [now](https://twitter.com/brian_armstrong/status/1207818862768480256) the #1 baker on the XTZ network.
 
-"MetaCartel", an effort to create a for-profit investment DAO in the mould of the original and infamous DAO but built on the complexity-averse Moloch, released a [white paper](https://github.com/metacartel/MCV/blob/master/Whitepaper.pdf). Moloch DAO [announced](https://twitter.com/ameensol/status/1212475508262363137) an update to v2 which facilitates pairing Moloch with a legal entity without violating securities regulations.
+"MetaCartel", an effort to create a for-profit investment DAO in the mold of the original and infamous DAO but built on the complexity-averse Moloch, released a [white paper](https://github.com/metacartel/MCV/blob/master/Whitepaper.pdf). Moloch DAO [announced](https://twitter.com/ameensol/status/1212475508262363137) an update to v2 which facilitates pairing Moloch with a legal entity without violating securities regulations.
 
 Algorand relay nodes voted to [accept](https://algorand.foundation/long-term-vesting-plan-vote-result) an [amendment](https://algorandfoundation.cdn.prismic.io/algorandfoundation/eb2a8c69-2262-42f8-99a4-09df485207b5_EIP-11252019AF_+Conditional+Accelerated+Vesting+Nov+30.pdf) to the vesting schedule of the tokens they received as grants from the Algorand Foundation. This amendment increases the number of Algo tokens relay nodes will receive by 25%, but extends the vesting schedule from 2 to 5 years, with a mechanism to speed it up if the Algo price rises. This concludes an [episode](https://algorand.foundation/voting-procedure-eip09092019pc) which started and was missed in Sep, with relay nodes voting to suspend their own rewards until a change to the vesting schedule could be agreed.
 
