--- a/journal/201912.md
+++ b/journal/201912.md
@@ -378,6 +378,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, richardred
-- reviews and feedback: {}
+- writing and editing: bee, Dustorf, degeri, fguisso, margaret\_mei, richardred, s\_ben
+- reviews and feedback: raedah
 - title image: {}
