Dev feedback, credits update

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -42,7 +42,7 @@ Numerous bugs squashed, including a bug in [Trezor wallet](https://github.com/de
 
 [Politeia](https://github.com/decred/politeia): Backend work to support CMS, bug fixes. Initial work to redesign CMS [merged](https://github.com/decred/politeiagui/pull/1605). { more info welcome } { how politeiagui 1605 is different from 1625? }
 
-[dcrpool](https://github.com/decred/dcrpool): Added payment request [processing](https://github.com/decred/dcrpool/pull/140) { dnldd, how does it work? do accounts request payments manually? }, added extensive [test coverage](https://github.com/decred/dcrpool/pull/141) for most components.
+[dcrpool](https://github.com/decred/dcrpool): Added backend support for processing manual [payment requests](https://github.com/decred/dcrpool/pull/140), which allows to clear any remaining balance before leaving the pool. Extensive [test coverage](https://github.com/decred/dcrpool/pull/141) added for most components.
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
@@ -56,13 +56,21 @@ New components implemented:
 
 - [BTC exchange wallet](https://github.com/decred/dcrdex/pull/72)
 - [client orderbook backend](https://github.com/decred/dcrdex/pull/79)
-- [MarketTunnel](https://github.com/decred/dcrdex/pull/85) { what does MarketTunnel do? }
+- further [integration](https://github.com/decred/dcrdex/pull/85) with the market manager, order router and book routers
 
 Other changes:
 
 - [order commitments](https://github.com/decred/dcrdex/pull/83) added to spec
 - order timestamp resolution changed from seconds to [milliseconds](https://github.com/decred/dcrdex/pull/96)
 - completed switch to [coin ID](https://github.com/decred/dcrdex/pull/91)
+
+Remaining high-level tasks for the DEX are:
+
+- on the server: several components (market manager, swapper, etc) and a terminal app
+- on the client: web UI, terminal UI, DCR and BTC wallets, book manager and a persistent database
+- RPC servers for the server and the client
+
+Most of these tasks are in progress or under review.
 
 [dcrandroid](https://github.com/decred/dcrandroid):
 
@@ -379,5 +387,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, Dustorf, degeri, fguisso, margaret\_mei, richardred, s\_ben
-- reviews and feedback: raedah
+- reviews and feedback: buck54321, chappjc, davecgh, dnldd, matheusd, raedah
 - title image: {}
